static/css/index.css
/* ... */
.package,
#package,
#profile {
  width: 490px;
}
.package header,
#package header,
#profile header {
  border-bottom: solid 1px #000;
  position: relative;
}
.package header h1,
#package header h1,
#profile header h1 {
  font: 28px Georgia, serif;
  margin: 0;
}
.package .unpublished h1,
#package .unpublished h1,
#profile .unpublished h1 {
  color: #999;
}
.package .row,
#package .row,
#profile .row {
  padding: 0.75em 0;
  border-top: solid 1px #ccc;
}
.package p.description,
#package p.description,
#profile p.description {
  font: 18px Georgia, serif;
}
.package table.metadata,
#package table.metadata,
#profile table.metadata {
  margin: 1em 0;
  width: 100%;
}
.package table.metadata tr,
#package table.metadata tr,
#profile table.metadata tr {
  border-top: solid 1px #ccc;
}
.package table.metadata th,
#package table.metadata th,
#profile table.metadata th,
.package table.metadata td,
#package table.metadata td,
#profile table.metadata td {
  padding: 0.5em 0;
  vertical-align: baseline;
}
.package table.metadata th,
#package table.metadata th,
#profile table.metadata th {
  color: #000;
  font-weight: normal;
  text-align: left;
  width: 130px;
}
.package table.metadata b,
#package table.metadata b,
#profile table.metadata b {
  color: #000;
  font-weight: bold;
  font-size: 14px;
}
.package .details ul.toc,
#package .details ul.toc,
#profile .details ul.toc {
  padding: 0;
  margin-bottom: 0;
  font-size: 16px;
}
.package .details ul.toc li,
#package .details ul.toc li,
#profile .details ul.toc li {
  display: inline-block;
  padding: 0.5em 32px 0.5em 16px;
}
.package .details ul.toc li:first-child,
#package .details ul.toc li:first-child,
#profile .details ul.toc li:first-child {
  background-color: #fff;
}
.package .details section,
#package .details section,
#profile .details section {
  padding: 16px;
  background-color: #fff;
  margin-right: -260px;
}
.package .details section#readme h1,
#package .details section#readme h1,
#profile .details section#readme h1 {
  font-size: 24px;
}
.package .details section#readme img,
#package .details section#readme img,
#profile .details section#readme img {
  max-width: 100%;
}
.package .details section#readme pre,
#package .details section#readme pre,
#profile .details section#readme pre {
  white-space: pre-wrap;
  max-width: 100%;
  overflow: auto;
  font-family: Monaco, monospace;
  background-color: #f9f9f8;
  padding: 16px;
}
.package .details section#readme table th,
#package .details section#readme table th,
#profile .details section#readme table th,
.package .details section#readme table td,
#package .details section#readme table td,
#profile .details section#readme table td {
  padding: 0.5em;
  vertical-align: baseline;
  border: solid 1px #ccc;
}
.package .details section#readme table tr:nth-child(2n) td,
#package .details section#readme table tr:nth-child(2n) td,
#profile .details section#readme table tr:nth-child(2n) td {
  background: #f8f8f8;
}
.package .star,
#package .star,
#profile .star {
  display: inline-block;
  position: absolute;
  right: 0;
  bottom: 3px;
  font-size: 2em;
  color: #000;
}
.package .star:before,
#package .star:before,
#profile .star:before {
  content: '☆ ';
}
.package .star:hover,
#package .star:hover,
#profile .star:hover {
  text-decoration: none;
}
.package .star-starred,
#package .star-starred,
#profile .star-starred {
  color: #f7c138;
}
.package .star-starred:before,
#package .star-starred:before,
#profile .star-starred:before {
  content: '★ ';
}
.package .user,
#package .user,
#profile .user {
  padding: 1px;
}
.package .user .avatar,
#package .user .avatar,
#profile .user .avatar {
  position: relative;
  top: 0;
  display: inline-block;
  vertical-align: middle;
  width: 32px;
  height: 32px;
}
#profile {
  position: relative;
}
#profile .avatar-large {
  display: block;
  position: absolute;
  width: 248px;
  height: 248px;
  top: 0;
  right: -260px;
}
#profile table.metadata tr:first-child {
  border-top: none;
}
.hiring .hiring-logo {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  padding: 10px;
  margin-bottom: 1em;
  width: 120px;
}
.hiring .hiring-logo a {
  text-indent: -9999px;
  display: block;
  height: 50px;
  width: 100px;
}
.hiring dd {
  display: inline-block;
  vertical-align: middle;
  width: 70%;
  margin: 0;
  margin-bottom: 1em;
}
.notfound {
  text-align: center;
}
.notfound img {
  width: 275px;
}
/* typeahead search */
#search-container {
  float: right;
}
.search-input {
  height: 32px;
  width: 260px;
  font-size: 18px;
  padding: 5px;
  font-family: Georgia, serif;
  border: solid 1px #ddd;
}
.tt-dropdown-menu {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  display: none;
  float: left;
  width: 270px;
  padding: 5px 0;
  margin: 2px 0 0;
  list-style: none;
  font-size: 14px;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,0.15);
  -webkit-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.175);
  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.175);
  box-shadow: 0 6px 12px rgba(0,0,0,0.175);
  -webkit-background-clip: padding;
  -moz-background-clip: padding;
  background-clip: padding-box;
}
.tt-suggestion > p {
  display: block;
  padding: 3px 20px;
  clear: both;
  font-weight: normal;
  line-height: 1.428571429;
  color: #333;
  white-space: nowrap;
}
.tt-suggestion > p:hover,
.tt-suggestion > p:focus,
.tt-suggestion.tt-cursor p {
  color: #fff;
  text-decoration: none;
  outline: 0;
  background-color: #428bca;
}
.tt-footer {
  text-transform: italic;
  margin-left: 8px;
  color: #cc3d33;
}
.tt-footer a {
  color: #cc3d33;
}
.tt-hint {
  opacity: 0.4;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
  filter: alpha(opacity=40);
}
#preview-banner {
  background-color: #cc3d33;
  position: fixed;
  top: 0;
  left: 0;
  color: #fff;
  width: 100%;
  padding: 0.25em 0;
  text-align: center;
}

